// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ul > formats case #mixed 1`] = `
"- item 1
- item 2
  - item 3
- item 4
"
`;

exports[`ul > formats case #mixed2 1`] = `
"- item 1
- item 2
  - item 3
- item 4
"
`;

exports[`ul > formats case #mixed3 1`] = `
"- item 1
- item 2
  - item 3
- item 4
"
`;

exports[`ul > formats case #mixed4 1`] = `
"- item 1
- item 2
  - item 3
- item 4
"
`;

exports[`ul > formats case #mixed5 1`] = `
"- This is a list item.
  - This is a CHILD list item.
    - This is a GRANDCHILD list item.
"
`;

exports[`ul > formats case #nested 1`] = `
"- item 1
  - item 2
  - item 3
"
`;

exports[`ul > formats case #simple 1`] = `
"- item 1
- item 2
- item 3
"
`;
